--- a/src/Twitch/src/front/style.css
+++ b/src/Twitch/src/front/style.css
@@ -55,20 +55,20 @@ body, html, #wrapper {
 .vote-option-wrapper {
     width: 100%;
     height: 100%;
-    text-shadow: 2px 2px 6px #000000;
+    text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     color: white;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 20px;
     position: absolute;
     z-index: 2;
 }
 
 .vote-option-name {
-    font-size: 25px;
+    font-size: 18px;
     left: 0;
     right: 0;
     text-align: center;
